[package]
name = "app-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2", features = ["derive"]}

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
simple_logger = "2.0"
reqwest = "0.11.11"
toml = "0.5"
tokio = { version = "1.20.0", features = ["full"] }
axum = "0.5.13"
base64 = "0.13.0"
rand = {version = "0.8.5", features = [ "getrandom" ]}
url = "2.2.2"
rusqlite = {version = "0.28.0", features = ["buildtime_bindgen", "bundled"]}

iwt_commons = { path = "../shared/commons" }

[package.metadata.nix]
build = true
app = true