[package]
name = "iwt_commons"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20.0", features = ["full"] }
log = "0.4"
reqwest = {version = "0.11.11", features = ["json"]}
async-mutex = "1.4.0"
oauth2 = "4.2.3"
rusqlite = { version = "0.28.0", features = ["bundled"] }
async-trait = "0.1.56"
urlencoding = "2.1.2"

[dev-dependencies]
url = "2.2.2"
wiremock = "0.5"
iwt_commons_stubs = { path = "./stubs" }
