[package]
name = "iwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2", features = ["derive"]}
tokio = { version = "1.20.0", features = ["full"] }

iwt_config = { path = "../../libraries/config" }
iwt_app_auth = { path = "../../libraries/app_auth" }
